--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="emailaddress">EmailAddress</string>
     <string name="password">Password</string>
     <string name="about_text">Version 1.0 </string>
-    <string name="about_As">The Neatshoe application is designed for the sneaker lover to use. The main function of neatshoe is product to purchase.</string>
+    <string name="about_As">The NeatShoe application is designed for the sneaker lover to use. The main purpose of NeatShoe is sneaker cleaning services and product to purchase.</string>
 
     <string-array name="quantity_string_array">
         <item>1</item>
